--- a/WebServicesFigaro/Views/MenuMvc/Edit.cshtml
+++ b/WebServicesFigaro/Views/MenuMvc/Edit.cshtml
@@ -10,7 +10,7 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Menu</h4>
         <hr />
@@ -36,8 +36,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EntranteId, "EntranteId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("EntranteId", null, htmlAttributes: new { @class = "form-control" })*@
-                @Html.DropDownListFor(m => m.EntranteId, (SelectList)ViewBag.EntranteId, string.Empty,new { @class = "form-control" })
+                @Html.DropDownList("EntranteId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownListFor(m => m.EntranteId, (SelectList)ViewBag.EntranteId, new { @class = "form-control" })*@
                 @*@Html.DropDownList("Entrante", null, string.Empty)*@
                 @Html.ValidationMessageFor(model => model.EntranteId, "", new { @class = "text-danger" })
             </div>
@@ -46,8 +46,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PrimeroId, "PrimeroId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("PrimeroId", null, htmlAttributes: new { @class = "form-control" })*@
-                @Html.DropDownListFor(m => m.PrimeroId, (SelectList)ViewBag.PrimeroId, string.Empty, new { @class = "form-control" })
+                @Html.DropDownList("PrimeroId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownListFor(m => m.PrimeroId, (SelectList)ViewBag.PrimeroId, string.Empty, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.PrimeroId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -55,8 +55,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.SegundoId, "SegundoId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("SegundoId", null, htmlAttributes: new { @class = "form-control" })*@
-                @Html.DropDownListFor(m => m.SegundoId, (SelectList)ViewBag.SegundoId, string.Empty, new { @class = "form-control" })
+                @Html.DropDownList("SegundoId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownListFor(m => m.SegundoId, (SelectList)ViewBag.SegundoId, string.Empty, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.SegundoId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -64,8 +64,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.GuarnicionId, "GuarnicionId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("GuarnicionId", null, htmlAttributes: new { @class = "form-control" })*@
-                @Html.DropDownListFor(m => m.GuarnicionId, (SelectList)ViewBag.GuarnicionId, string.Empty, new { @class = "form-control" })
+                @Html.DropDownList("GuarnicionId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownListFor(m => m.GuarnicionId, (SelectList)ViewBag.GuarnicionId, string.Empty, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.GuarnicionId, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -73,8 +73,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.PostreId, "PostreId", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @*@Html.DropDownList("PostreId", null, htmlAttributes: new { @class = "form-control" })*@
-                @Html.DropDownListFor(m => m.PostreId, (SelectList)ViewBag.PostreId, string.Empty, new { @class = "form-control" })
+                @Html.DropDownList("PostreId", null, htmlAttributes: new { @class = "form-control" })
+                @*@Html.DropDownListFor(m => m.PostreId, (SelectList)ViewBag.PostreId, string.Empty, new { @class = "form-control" })*@
                 @Html.ValidationMessageFor(model => model.PostreId, "", new { @class = "text-danger" })
             </div>
         </div>
